--- a/VRChat/08/1332408.html
+++ b/VRChat/08/1332408.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CVopg3ar/VRK23bt4A10k2HJjJ/gdFbRRu229kXibdw="></script>
+    "2lqP/B1or/MuSt20mJyzrJxnSRPyv2RJUY2THfm9eBU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ツインテールリボン","description":"VRChat使用想定　　ツインテールリボン\n\n\n内容物\n・ツインテールリボン.unitypackage\n・UVテンプレート\n\nモデル概要\n\nポリゴン数：356\nマテリアル数：1\n\nボーン入ってるのでダイナミックボーンの適応もできます。\n片側のみでの使用もできます。\n\n\n改変可・再配布不可です。","url":"https://booth.pm/ja/items/1332408","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/c5e6ca9e-0060-44bc-918c-e161cccb358b/i/1332408/cb62f264-7a64-4b80-b678-3318dcb0ee6a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CVopg3ar/VRK23bt4A10k2HJjJ/gdFbRRu229kXibdw="></script>
+    nonce="2lqP/B1or/MuSt20mJyzrJxnSRPyv2RJUY2THfm9eBU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1332408/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               141
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1332408/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               141
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
