--- a/VRChat/65/1332365.html
+++ b/VRChat/65/1332365.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kc+l40m6at3jeSiAPl1hKYkp19TuxuHeaR//xetEcsk="></script>
+    "67oq7SkVEcu/pjSSUvKRjXKdzF4DdAMR7lnIwASwRS0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Away From Keyboard　Tシャツ","description":"ちょっとおしゃれなクソTです。\n価格は大体がクソT代なので勘弁して！\n\nAFKTの黒はこちら　https://mrtake.booth.pm/items/2108786\n\nこの商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。","url":"https://booth.pm/ja/items/1332365","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"3150","highPrice":"3150"},"image":"https://booth.pximg.net/c/620x620/48d020b0-2d30-4465-8012-7b84ca8b967d/i/1332365/e1197327-7747-43dd-a94c-17fd6932a5a4_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kc+l40m6at3jeSiAPl1hKYkp19TuxuHeaR//xetEcsk="></script>
+    nonce="67oq7SkVEcu/pjSSUvKRjXKdzF4DdAMR7lnIwASwRS0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1332365/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1332365/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
@@ -500,7 +501,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023/05/16</span>
                                       </div>
                                     </div>
                                   </div>
@@ -528,7 +529,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023/05/16</span>
                                       </div>
                                     </div>
                                   </div>
@@ -556,7 +557,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023/05/16</span>
                                       </div>
                                     </div>
                                   </div>
@@ -584,7 +585,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023/05/16</span>
                                       </div>
                                     </div>
                                   </div>
