--- a/VRChat/24/1330324.html
+++ b/VRChat/24/1330324.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "jdXUoRtkOmEDsGuH+jgYHmKULNhfdg0iyi3+ZU4n+KE="></script>
+    "NgnkzLxYfp8kwZ6OE3YfCcO9/cPYV+fhuLulp7Febs0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"DXトチエイターなりきりヘッドセット","description":"VRChatアバターアクセサリー想定\n「DXトチエイターなりきりヘッドセット」\n\n\n栃木県のリアルでもバーチャルでも活動する創造戦士トチエイターのヘッドパーツをデフォルメしてなりきりが出来る！\n\nこんな方におすすめ\n・創造戦士トチエイターが好き\n・栃木県に住んでいる\n・栃木県が好き\n・栃木県に住みたい\n・名前に「と」か「ち」か「ぎ」入っている\n\n\n\n","url":"https://booth.pm/ja/items/1330324","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/231596dc-ef1f-43b0-bcba-06d4d38954dc/i/1330324/fbc852af-d741-4879-8d74-bae891dea55c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jdXUoRtkOmEDsGuH+jgYHmKULNhfdg0iyi3+ZU4n+KE="></script>
+    nonce="NgnkzLxYfp8kwZ6OE3YfCcO9/cPYV+fhuLulp7Febs0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1330324/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1330324/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
