--- a/VRChat/03/1327703.html
+++ b/VRChat/03/1327703.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "7JQc8iJOqY7qM7546Ux9kMg2YSM0bPCBHdyXT0+DNt8="></script>
+    "N11GO65eYh1mpVhrjJE32dKrc39l3fTKHkiKVsdLmtQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChatアバター連続自動アップロード＆設定ツール】MyAvatarBuildSetting","description":"VRChatで複数の異なる設定のアバターを連続自動アップロード出来るエディタ拡張です。\n\n手作業で設定を変えて1つずつアップロードする手間がなくなります。\n\n★バージョン4まで\nVRCSDK2（従来）およびVRCSDK3（Avatars3.0）両環境で動作します。\n\n★バージョン5から\nVRCSDK3（Avatars3.0）で動作します。\n\n★バージョン5.2から\nVRCSDK3（Avatars3.0）・VCC（VRChat Creater Companion / VRChat SDK - Avatars 3系）で動作します。","url":"https://booth.pm/ja/items/1327703","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/f395cbdc-1e1f-4507-a60f-e85a50f576a0/i/1327703/f65eb63a-20f0-4c91-80bb-654f7095b330_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7JQc8iJOqY7qM7546Ux9kMg2YSM0bPCBHdyXT0+DNt8="></script>
+    nonce="N11GO65eYh1mpVhrjJE32dKrc39l3fTKHkiKVsdLmtQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -120,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1327703/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               437
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1327703/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               437
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
