--- a/VRChat/20/1332020.html
+++ b/VRChat/20/1332020.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "MJnaspLc89oTMRVkMrcMuGZfNuZPyVBay9SRhRzC31s="></script>
+    "lpCAUEjNgv99E6Jv8rmsbdXFUU8WaG+dRoPDNvrPPW8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"平成のFBX","description":"平成に出力された貴重な正方形モデル(fbx)です！！\nあなたのアバターやワールドにおひとついかがでしょうか！？","url":"https://booth.pm/ja/items/1332020","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/4735b7e0-c414-4959-a443-c604fdc82597/i/1332020/f22c4e73-5dff-4142-8c38-8fc91fea0e53_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MJnaspLc89oTMRVkMrcMuGZfNuZPyVBay9SRhRzC31s="></script>
+    nonce="lpCAUEjNgv99E6Jv8rmsbdXFUU8WaG+dRoPDNvrPPW8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1332020/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1332020/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
