--- a/VRChat/24/1331824.html
+++ b/VRChat/24/1331824.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "luJxKrGfcce/DyYLfRRBiPyNBZfDzZA7CTdem376PhI="></script>
+    "hCOJaSod/Q12OQs3pyCql+TSZjAWL0g4epE2Tk6m1d8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"夢通じの鍵","description":"夢の世界の奥深くにあるとされる、どこかの世界へとつながる扉を開けるための鍵になります。\n鍵の管理にはくれぐれもご注意を……\n\n\n\n※設定はフィクションです\n　夢の中で見た鍵を再現してみました。\n　アクセサリーとして身につけてみたり、ワールドに使用したりなど、お好みでご使用ください。\n\n\n\n\n～内容物～\n・unitypackage\n・FBX\n・テクスチャ、psdデータ\n\n\n\n★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）\nhttps://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing","url":"https://booth.pm/ja/items/1331824","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1331824/b9c5c76b-62ec-4785-9d36-50217d6a10ae_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="luJxKrGfcce/DyYLfRRBiPyNBZfDzZA7CTdem376PhI="></script>
+    nonce="hCOJaSod/Q12OQs3pyCql+TSZjAWL0g4epE2Tk6m1d8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1331824/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               260
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1331824/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               260
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
