--- a/VRChat/72/1332672.html
+++ b/VRChat/72/1332672.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "caj1mW4D9vSstV7p+dsRWm9GhDDUx36gIBo89IxBKFE="></script>
+    "UijPW2sjKWpa7+hnuYM3CO1SB5Xc3iTf04+Da4tnww0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ローポリ鮭の切り身","description":"ローポリ＋ドット絵テクスチャで作成された鮭の切り身です。\nデータ配布は初めてなので、配布方法にアドバイス等頂けたらと思います。\n","url":"https://booth.pm/ja/items/1332672","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/f215380d-1931-4039-9529-a102e7243a1f/i/1332672/742f4228-1c37-403c-92cd-4a92f6243e0a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="caj1mW4D9vSstV7p+dsRWm9GhDDUx36gIBo89IxBKFE="></script>
+    nonce="UijPW2sjKWpa7+hnuYM3CO1SB5Xc3iTf04+Da4tnww0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1332672/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1332672/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
